Fix the overflow for dropdowns

--- a/static/css/global/ui-kit-page.css
+++ b/static/css/global/ui-kit-page.css
@@ -256,6 +256,6 @@ hr {
   max-width: 30em;
 }
 
-body > .card {
+body .card {
   overflow: visible;
 }
